--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
                                     <li>亚洲</li>
                                     <li>欧洲</li>
                                     <li>日韩</li>
+                                    <li>短视频</li>
+                                   
                                 </ul>
                </body>
 </html>
